# Software3dRenderer

./: CMakeLists.txt  ICanvas.hpp  README.md  build_n_run.py  canvas.cpp  canvas.hpp  main.cpp  renderer.cpp  renderer.hpp
model_loaders/: IModelLoader.hpp  ObjModelLoader.cpp  ObjModelLoader.hpp
src/: CMakeLists.txt  ICanvas.hpp  canvas.cpp  canvas.hpp  main.cpp  renderer.cpp  renderer.hpp  utils.hpp
src/geometry/: face.hpp  model.hpp  point.hpp  rect.hpp  triangle.hpp  utils.hpp  vec.hpp  vertex.hpp
src/model_loaders/: CMakeLists.txt
